AUGREL/src/objects/Manual_Cure_State_threshold__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Lease_Cure_Required_State__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: TFS AB6 Requirement 
INT: NA
Trans: Manual Cure workflow 
BU: Collections 
FD: Flag showing if CURE is required for Lease record type of Financial account.</description>
        <label>Lease - Cure Required State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_FOPP_Minimum_Days_Delinquent__c</fullName>
        <description>SRC: TFS AB6 Requirement 
INT: NA
Trans: Manual Cure workflow 
BU: Collections 
FD: Lease FOPP Minimum days to be used in Manual Cure workflow</description>
        <label>Lease-FOPP Minimum Days Delinquent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Form__c</fullName>
        <description>SRC: TFS AB6 Requirement 
INT: NA
Trans: Manual Cure workflow 
BU: Collections 
FD: Lease Form Number to be used in Manual Cure workflow</description>
        <label>Lease Form #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Cure_Required_State__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: TFS AB6 Requirement 
INT: NA
Trans: Manual Cure workflow 
BU: Collections 
FD: Retail Cure Required Flag to be used in Manual Cure workflow</description>
        <label>Retail - Cure Required State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_FOPP_Minimum_Days_Delinquent__c</fullName>
        <description>SRC: TFS AB6 Requirement 
INT: NA
Trans: Manual Cure workflow 
BU: Collections 
FD: Retail FOPP Minimum Days to be used in Manual Cure workflow</description>
        <label>Retail-FOPP Minimum Days Delinquent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Form__c</fullName>
        <description>SRC: TFS AB6 Requirement 
INT: NA
Trans: Manual Cure workflow 
BU: Collections 
FD: Retail Form Number to be used in manual Cure workflow</description>
        <label>Retail Form #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Manual Cure State Threshold</label>
</CustomObject>